--- a/plugin.xml
+++ b/plugin.xml
@@ -12,7 +12,7 @@
     <js-module src="Backbutton.js" name="Backbutton">
         <clobbers target="navigator.Backbutton" />
     </js-module>
-    <!-- android -->
+<!-- android -->
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="BackbuttonPlugin">
@@ -22,6 +22,20 @@
         <source-file src="BackbuttonPlugin.java" target-dir="src/com/xsmar/tv/" />
     </platform>
     
+<!-- Core plugins -->
+    <plugin name="cordova-plugin-device" />
+<!-- Core plugins -->
+    
+    <access origin="*"/>
+    <allow-intent href="http://*/*" />
+    <allow-intent href="https://*/*" />
+    <allow-intent href="tel:*" />
+    <allow-intent href="sms:*" />
+    <allow-intent href="mailto:*" />
+    <allow-intent href="geo:*" />
+    <platform name="android">
+        <allow-intent href="market:*" />
+    </platform>
     
 <!-- versionCode is optional and Android only -->   
     <icon src="store.png" />
